--- a/order.html
+++ b/order.html
@@ -1,1 +1,61 @@
 <!-- The order page goes here -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Dawg Coffee</title>
+
+		<link rel="icon" type="image/png" href="img/page-icon.png">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
+	<body>
+		<nav class="navbar navbar-default navbar-fixed-top">
+    		<div class="container">
+        <!-- Header for mobile -->
+		        <div class="navbar-header">
+		        	<ul class="nav navbar-nav">
+					    <li id = "icon" ><a href="index.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.664 21.665"><path d="M2.756 20.725h2.95c.04.257.254.458.523.458h6.706c.27 0 .482-.2.523-.458h2.95c.498 0 .902-.404.902-.903H1.854c0 .5.404.903.902.903zM20.865 11.444c-.752-.61-1.81-.62-2.508-.542.02-.486.03-.983.03-1.5H0c0 4.97.752 8.556 5.51 9.894h7.367c1.885-.53 3.135-1.418 3.964-2.6 1.807-.035 4.712-.746 4.82-3.24.048-1.092-.406-1.698-.795-2.012zm-3.267 3.826c.346-.89.55-1.89.664-2.988.488-.08 1.33-.13 1.754.215.078.064.32.262.293.9-.058 1.293-1.662 1.727-2.712 1.873zM7.49 8.704s3.5-.257 1.897-3.208C8.1 3.126 8.393 1.736 10.04.48c0 0-5.397 1.376-2.25 5.63 1.156 1.855-.3 2.594-.3 2.594z"/><path d="M9.85 8.468s2.804-.59 1.278-2.846c-.554-.978.21-1.327.21-1.327s-1.805.057-1.043 1.608c.61 1.247.43 1.955-.445 2.565z"/></svg></a></li>
+					    <li><a href="#cafe">cafe</a></li>
+					    <li><a href="#menu">menu</a></li>
+					    <li><a href="#story">story</a></li>
+					    <li><a href="order.html">order</a></li>
+					</ul>
+		        </div>
+		   
+		        
+			</div>
+    	</nav>
+    	<header>
+			<div class="container">
+				<h1>Dawg Coffee <br>Orders</h1>
+				<p id="motto">Supplying Beans to Sleepy Huskies Since 2015</p>	
+			</div>
+		</header>
+		<headline>
+			Coming Soon...
+		</headline>
+		<footer>
+			<div class = "container">
+				<div class = "row">
+					<div class = "col-sm-3">
+						<p>&copy; 2015 Dawg Coffee</p>
+						<p>Contact information: <a href="mailto:someone@example.com">
+						someone@example.com</a>.</p>
+					</div>
+					<div class = "col-sm-9">
+						<p>Icons by 
+						    <a href="http://www.freepik.com" title="Freepik">Freepik</a>, 
+						    <a href="http://www.bogdanrosu.com" title="Bogdan Rosu">Bogdan Rosu</a>
+						    from 
+						    <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> 
+						    is licensed under 
+						    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</body>
+</html>
